2013-05-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/api.py, twitter/output.py: Improved Twitter API access
	  interval.

2013-05-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/account.py (TwitterConfig): Improved Twitter
	  configuration data object.
	* updatewindow.py (UpdateWindow): Added support to insert quote on
	  reply windows (issue #28).  Improved status letters counting for
	  Twitter.

2013-05-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.1.1 release.

2013-05-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* tumblr/account.py (Tumblr.posts): Added support hostname CNAME
	  for Tumblr posts feeds.
	* tumblr/entry.py: Fixed a bug.
	* tumblr/assistant.py (TumblrAuthAssistant): Fixed a Tumblr
	  authorization error (issue #27).

>>>>>>> other
2013-05-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.1 release.

2013-04-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/tweetentry.py: Fixed an entry atribute.

2013-04-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* de_DE.po: Updated German translation.  Thanks t_bb_!
	* es_ES.po: Updated Spanish translation.  Thanks Adolfo Jayme!
	* twittytwister/streaming.py: Fixed incompatibility with Twisted
	  12.3.0. Thanks Ralph Meijer! Applyed his patch from his git branch.
	* twittytwister/twitter.py (Twitter._urlencode): Fixed a '/' quote
	  problem.
	* menu.py, preferences.py, preferences.glade: Removed a 'View
	  Conversation' menu item. The API is not supported Twitter API 1.1.

2013-04-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/account.py, twitter/output.py, tweetentry.py:
	  Added support for Twitter API 1.1 (issue #23).

2013-04-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twittytwister/twitter.py: Updated streaming API endpoints.
	* twittytwister/*: Updated twitty-twister.
	* ar.po: Updated Arabic translation.  Thanks Humaidan Mohammed!
	* de_DE.po: Updated German translation.  Thanks t_bb_!

2013-04-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
